--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body{
     flex: 1;
     margin-right: 16px;
     font-size: 18px;
+    width: 80%;
 }
 
 .search button{
@@ -43,8 +44,8 @@ body{
     outline: 0;
     background: white;
     border-radius: 50%;
-    width: 60px;
-    height: 40px;
+    width: 15%;
+    height: 50px;
     cursor: pointer;
 
 }
