--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body{
     margin-right: 16px;
     font-size: 18px;
     width: 80%;
+        
 }
 
 .search button{
@@ -47,6 +48,7 @@ body{
     width: 15%;
     height: 50px;
     cursor: pointer;
+
 
 }
 
@@ -89,5 +91,13 @@ body{
 
 
 .weather{
+    display: none;
+}
+
+.error{
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
     display: none;
 }
